name:                phycs-gloss
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/phycs/phycs-gloss#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Apecs.Physics.Gloss
  build-depends:       base >= 4.7 && < 5, phycs, gloss, apecs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jonascarpay/phycs
